--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,17 +1,14 @@
 name: Metrics
 on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit (optional)
+  schedule: [{cron: "0 0 * * *"}]
   workflow_dispatch:
-  push: {branches: ["main"]}
-
+  push: {branches: ["master", "main"]}
 jobs:
-  name: Full-year calendar
-  uses: lowlighter/metrics@latest
-  with:
-    filename: metrics.plugin.isocalendar.fullyear.svg
-    token: ${{ secrets.METRICS_TOKEN }}
-    base: ""
-    plugin_isocalendar: yes
-    plugin_isocalendar_duration: full-year
+  github-metrics:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
