--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,3 +12,13 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          plugin_languages: yes
+          plugin_languages_ignored: html, css
+          plugin_achievements: yes
+      - name: Half-year calendar
+        uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.isocalendar.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_isocalendar: yes
