--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -15,6 +15,20 @@ jobs:
           plugin_languages: yes
           plugin_languages_ignored: html, css
           plugin_achievements: yes
+      - uses: lowlighter/metrics@latest
+        with:
+          token: ${{ secrets.METRICS_TOKEN }}
+          plugin_languages: yes
+          plugin_languages_ignored: html, css
+          plugin_achievements: yes
+      - name: Recent Activity Charts
+        uses: lowlighter/metrics@latest
+        with:
+        base: ""
+        plugin_habits: yes
+        plugin_habits_facts: no
+        plugin_habits_charts: yes
+        config_timezone: America/Los_Angeles
       - name: Half-year calendar
         uses: lowlighter/metrics@latest
         with:
