--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,18 +12,21 @@ jobs:
       - uses: lowlighter/metrics@latest
         name: language plugin
         with:
+          filename: language.svg
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_languages: yes
           plugin_languages_ignored: html, css
       - uses: lowlighter/metrics@latest
         name: achievement plugin
         with:
+          filename: achievement.svg
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_achievements: yes
       - name: Recent Activity Charts
         uses: lowlighter/metrics@latest
         with:
           base: ""
+          filename: habits.svg
           plugin_habits: yes
           plugin_habits_facts: no
           plugin_habits_charts: yes
@@ -31,7 +34,7 @@ jobs:
       - name: Half-year calendar
         uses: lowlighter/metrics@latest
         with:
-          filename: metrics.plugin.isocalendar.svg
+          filename: iso-calendar.svg
           token: ${{ secrets.METRICS_TOKEN }}
           base: ""
           plugin_isocalendar: yes
