compact achievements pls

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,9 +19,10 @@ jobs:
       - uses: lowlighter/metrics@latest
         name: achievement plugin
         with:
-          filename: achievement.svg
+          filename: achievements.svg
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_achievements: yes
+          plugin_achievements_display: compact
       - name: Recent Activity Charts
         uses: lowlighter/metrics@latest
         with:
