--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: lowlighter/metrics@latest
         name: language plugin
         with:
-          filename: language.svg
+          filename: languages.svg
           token: ${{ secrets.METRICS_TOKEN }}
           plugin_languages: yes
           plugin_languages_ignored: html, css
